--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ body {
 	font-family: 'cursive_serifoblique';
 }
 
+.dropDown {
+	background-color: #3e3e3e;
+	padding: 16px;
+    	font-size: 16px;
+    	border: none;
+    	cursor: pointer;
+	visibility: hidden;
+}
+
 #logo {
 	display: block;
 	margin: auto;
